Added cert prov data to gen_data
Related to #50